crates/formatter/tests/snapshots/snapshots__vaultwarden__2024-02-14-170000_add_state_to_sso_nonce__down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table sso_nonce;

create table sso_nonce (
	nonce char(36) not null primary key,
	created_at datetime not null default CURRENT_TIMESTAMP
);
