crates/formatter/tests/snapshots/snapshots__vaultwarden__2024-02-14-170000_add_state_to_sso_nonce__up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table sso_nonce;

create table sso_nonce (
	state text not null primary key,
	nonce text not null,
	redirect_uri text not null,
	created_at datetime not null default CURRENT_TIMESTAMP
);
